# knowledge-base

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  log4rs.yml  mysql.env  release.sh  test.sh
deploy/: Dockerfile  docker-compose.yml
migrations/2025-01-12-024026_user/: down.sql
migrations/2025-01-12-074300_user/: down.sql
migrations/2025-01-13-122021_user_secret/: down.sql
migrations/2025-01-16-114730_msg_send_log/: down.sql
src/: main.rs  schema.rs
src/config/: app_err.rs  app_res.rs  log_init.rs  mod.rs  user_context.rs
src/dao/: init.rs  mod.rs  redis_db.rs  user_basic_dao.rs  user_secret.rs
src/handler/: user.rs
src/handler/admin/: mod.rs  send_verification_handle.rs  user.rs
src/middleware/: auth.rs  log_middlware.rs  log_req_res.rs  mod.rs  user_context.rs
src/models/: mod.rs
src/models/entity/: mod.rs  send_msg_log.rs
src/models/enum/: mod.rs  redis_enum.rs
src/models/req/: captcha_req.rs  mod.rs  send_verification.rs  user_check_req.rs  user_log_off_req.rs
src/models/res/: captcha_res.rs  email_res.rs  mod.rs
src/models/vo/: email_vo.rs  mod.rs
src/router/: mod.rs
src/service/: mod.rs  user.rs
src/service/admin/: mod.rs  msg_send_log_service.rs  send_verification_service.rs  user.rs
src/service/open/: mod.rs  open_service.rs
src/util/: argon2util.rs  mod.rs
