[package]
name = "knowledge-base"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"

diesel = {version = "2.2.0", features = ["mysql", "r2d2", "chrono"]}
chrono = { version = "0.4.39", features = ["serde"] }
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }


tokio = { version = "1.39.3", features = ["full"] }

serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

uuid = { version = "1.11.1", features = ["v4"]}

jsonwebtoken = "9.3.0"
futures-util = "0.3.30"

dotenvy = "0.15.0"
reqwest = "0.12.12"
hmac = "0.13.0-pre.4"
sha1 = "0.10.6"
base64 = "0.22.1"
url = "2.5.2"
form_urlencoded = "1.2.1"
hmac-sha1 = "0.2.2"
percent-encoding = "2.3.1"
rand = "0.8.5"

