[package]
name = "knowledge-base"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-cors = "0.6"
diesel = {version = "2.2.0", features = ["mysql", "r2d2", "chrono"]}
chrono = { version = "0.4.39", features = ["serde"] }
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }


tokio = { version = "1.39.3", features = ["full"] }

serde = { version = "1.0.209", features = ["derive"] }
getset = "0.1.3"
serde_json = "1.0.127"

uuid = { version = "1.11.1", features = ["v4"]}

jsonwebtoken = "9.3.0"
futures-util = "0.3.30"

dotenvy = "0.15.0"
reqwest = "0.12.12"
hmac = "0.13.0-pre.4"
base64 = "0.22.1"
url = "2.5.2"
form_urlencoded = "1.2.1"
hmac-sha1 = "0.2.2"
rand = "0.8.5"
redis = {version = "0.28.1"}
r2d2_redis = "0.14.0"
once_cell = "1.19.0"
captcha = "0.0.6"
image = "0.25.5"

tracing = "0.1.41"              # 用于链路跟踪
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "json"]}
tracing-appender = "0.2.3"# 用于配置链路跟踪的日志
futures = "0.3.31"
actix-web-validator = "5.0.0"
validator = { version = "0.16"}
validator_derive = "0.16.0"
argon2 = "0.5.3"
rand_core = { version = "0.9.0", features = ["std"] }
http = "0.2.12"
